--- a/frontend_react/src/components/Navbar/Navbar.scss
+++ b/frontend_react/src/components/Navbar/Navbar.scss
@@ -14,13 +14,13 @@
     z-index: 2;
 }
 
-.app__navabar-logo {
+.app__navbar-logo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
 
     img {
-        width: 90px;
+        width: 95px;
         height: 20px;
 
         @media screen and (min-width: 2000px) {
